--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "rabbit:logs": "./src/scripts/rabbit.sh logs"
   },
   "dependencies": {
+    "@msgpack/msgpack": "^3.1.3",
     "amqplib": "^0.10.9"
   },
   "devDependencies": {
     "@types/amqplib": "^0.10.7",
     "@types/node": "^20.19.28",
+    "prettier": "3.8.0",
     "tsx": "^3.7.0",
     "typescript": "^4.4.0"
   }
